Gtk+-3.20 ContrastHighInverse: fix notebook bg color of the look-screen

--- a/desktop-themes/ContrastHighInverse/gtk-3.0/mate-applications.css
+++ b/desktop-themes/ContrastHighInverse/gtk-3.0/mate-applications.css
@@ -309,3 +309,7 @@ na-tray-applet {
     border-width: 2px;
 }
 
+.lock-dialog notebook {
+    background-color: shade (@theme_bg_color, 1.0);
+}
+
